<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogFragment">

    <LinearLayout
        android:layout_width="390sp"
        android:layout_height="300sp"
        android:background="@drawable/backgroundfordialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="280sp"
            android:layout_height="30sp"
            android:layout_marginStart="57sp"
            android:layout_marginTop="10sp"
            android:text="@string/MainTextDialog"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="330sp"
            android:layout_height="40sp"
            android:layout_marginStart="-320sp"
            android:layout_marginTop="40sp"
            android:text="@string/instructionFirst"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="330sp"
            android:layout_height="40sp"
            android:layout_marginStart="-330sp"
            android:layout_marginTop="80sp"
            android:text="@string/instructionSecond"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="330sp"
            android:layout_height="53sp"
            android:layout_marginStart="-330sp"
            android:layout_marginTop="120sp"
            android:text="@string/instructionThird"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="330sp"
            android:layout_height="40sp"
            android:layout_marginStart="-330sp"
            android:layout_marginTop="180sp"
            android:text="@string/instructionFourth"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/NextDialog"
            android:layout_width="200sp"
            android:layout_height="55sp"
            android:layout_marginStart="-150sp"
            android:layout_marginTop="235sp"
            android:text="@string/TextButtonGoToTheSiteDialog"
            android:background="@drawable/buttoncheck"
            android:textColor="#1331D8" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>